--- a/main.css
+++ b/main.css
@@ -1,9 +1,6 @@
 .hero{
   height: 100vh;
   width: 100%;
-  background-image: url(images/mug-jpeg.webp);
-  background-size: cover;
-  background-position: center;
 }
 
 nav{
@@ -13,6 +10,7 @@ nav{
   padding-top: 20px;
   padding-right: 10px;
   padding-left: 10px;
+  background-color: rgba(0, 0, 0, 0.218);
 }
 
 .logo{
@@ -60,7 +58,6 @@ nav ul li a:hover{
   padding: 10px;
   color: lightgray;
   cursor: pointer;
-
 }
 
 .fa-solid:hover{
@@ -96,4 +93,24 @@ section{
   font-size: 10px;
   color: lightgrey;
   margin-bottom: 50px;
+}
+
+.iContainer{
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+
+}
+
+.imgcon{
+  display: flex;
+  width: 200px;
+  height: 300px;
+  object-fit: cover;
+  object-position: 80% 100%;
+}
+
+.hcom{
+  font-size: 25px;
+  margin-top: 5px;
 }
