updated html n css
added more text to html and added new things to css

--- a/main.css
+++ b/main.css
@@ -15,3 +15,14 @@
 .iright{
   flex: 1;
 }
+
+.ihead2{
+  font-weight: 200;
+  font-size: 25px;
+  color: #5d8aa8;
+}
+
+.idesc{
+  font-size: 15px;
+  color: darkgray;
+}
