--- a/main.css
+++ b/main.css
@@ -3,7 +3,6 @@
     left: 0;
     top: 0;
     right: 0;
-    z-index: 9999;
     padding-top: 10px;
     padding-bottom: 10px;
     border-bottom: 1px solid #ddc686;
@@ -35,12 +34,21 @@
 }
 
 .nav-btn{
-  flex: 1;
+  display: flex;
   align-items: center;
+  width: 100%;
+  justify-content: space-around; 
 }
 
 .nav-button{
-  justify-content: space-around;
-  text-align: center;
+ align-items: center;
+ color: white;
+ border-radius: 8px;
+ border-color: lightgray;
+ background-color: darkblue;
+ font-size: 20px;
+ padding: 10px;
+ border: none;
+ cursor: pointer;
 }
 
