--- a/main.css
+++ b/main.css
@@ -7,10 +7,11 @@
     padding-bottom: 10px;
     border-bottom: 1px solid #ddc686;
     background-color: black;
+    border-bottom: 3px solid #ddc686;
 }
 
 .nav-left{
-  flex: 1;
+  display: flex;
   align-items: center;
 }
 
@@ -18,7 +19,8 @@
   color: white;
   text-align: center;
   font-weight: bold;
-  font-size: 25px;
+  font-size: 30px;
+  margin-left: 20px;
 }
 
 .nav-right{
@@ -41,20 +43,22 @@
   display: flex;
   align-items: center;
   width: 100%;
-  justify-content: space-around;
-  margin: 20px 0 0 0; 
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .nav-button{
- align-items: center;
- border-radius: 8px;
  background-color: black;
  font-size: 20px;
- padding: 10px;
- border: 1;
+ padding: 15px;
+ border: 1px solid #ddc686;
  cursor: pointer;
- border-color: #ddc686;
  color: #ddc686;
+ position: relative;
+ justify-content: center;
+ align-items: center;
+ display: none;
 }
 
 a{
