--- a/main.css
+++ b/main.css
@@ -8,7 +8,6 @@ body {
 }
 
 .all {
-  width: 800px;
   margin: 0 auto;
 }
 
@@ -16,7 +15,6 @@ body {
   background-color: #f7f7f7;
   padding: 20px 40px;
   margin-bottom: 60px;
-  height: 80px;
 }
 
 .nav-title {
@@ -40,12 +38,15 @@ a:link {
   background-color: black;
   color: white;
   font-size: 15px;
-  padding: 15px;
+  padding: 10px;
   font-weight: bold;
   cursor: pointer;
+  position: absolute;
+  right: 10px;
+  top: 90px;
+  height: fit-content;
 }
 nav {
-  margin-left: 20px;
   margin-bottom: 20px;
   text-align: center;
   font-size: 15px;
